--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,6 @@
-
-[defaults]
-host_key_checking = false
-inventory        = ./hosts.txt
+[defaults] 
+host_key_checking = no 
+record_host_keys = no 
+remote_user    = ubuntu
+ansible_user   = ubuntu
+roles_path = ./roles
