--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -3,11 +3,15 @@ aws-ec2-lb
 aws-ec2-jk
 aws-ec2-wbapp
 
+[web-apps]
+aws-ec2-jk
+aws-ec2-wbapp
+
 [loadbalancer]
-aws-ec2-lb     ansible_host=
+aws-ec2-lb     ansible_host=3.122.60.196
 
 [jenkins]
-aws-ec2-jk     ansible_host=
+aws-ec2-jk     ansible_host=172.31.43.33
 
 [webapp]
-aws-ec2-wbapp  ansible_host=
+aws-ec2-wbapp  ansible_host=192.168.1.211
