--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -1,1 +1,3 @@
-- import_playbook: playbooks/common.yaml
+- import_playbook: playbooks/playbook-common.yaml
+- import_playbook: playbooks/playbook-nginx.yaml
+- import_playbook: playbooks/playbook-webapp.yaml
