--- a/ansible/inventory/group_vars/all.yml
+++ b/ansible/inventory/group_vars/all.yml
@@ -1,4 +1,6 @@
-inventory_path: "/home/taras/diplomna/ansible"
+inventory_path: "/home/taras/.ssh"
 
-ansible_ssh_private_key_file: "{{inventory_path}}/aws_key"
+#ansible_ssh_private_key_file: "{{inventory_path}}/aws_key.pem"
 ansible_become: true
+
+checkout_dir: /tmp/checkout
