--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,17 +1,17 @@
 [all]
 aws-ec2-lb
-aws-ec2-jk
+aws-ec2-jk-sq
 aws-ec2-wbapp
 
-[web-apps]
-aws-ec2-jk
+[general]
+aws-ec2-jk-sq
 aws-ec2-wbapp
 
 [loadbalancer]
 aws-ec2-lb     ansible_host=3.122.60.196
 
-[jenkins]
-aws-ec2-jk     ansible_host=172.31.43.33
+[jnks-sql]
+aws-ec2-jk-sq     ansible_host=172.31.43.33
 
 [webapp]
 aws-ec2-wbapp  ansible_host=192.168.1.211
