--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -1,3 +1,6 @@
 - import_playbook: playbooks/playbook-common.yaml
 - import_playbook: playbooks/playbook-nginx.yaml
 - import_playbook: playbooks/playbook-webapp.yaml
+- import_playbook: playbooks/playbook-sql.yaml
+#- import_playbook: playbooks/playbook-docker.yaml
+#- import_playbook: playbooks/playbook-jenkins.yaml
