--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,5 +1,5 @@
 [all]
-aws-ec2-lb
+#aws-ec2-lb
 aws-ec2-jk-sq
 aws-ec2-wbapp
 
@@ -8,10 +8,10 @@ aws-ec2-jk-sq
 aws-ec2-wbapp
 
 [loadbalancer]
-aws-ec2-lb     ansible_host=3.122.60.196
+#aws-ec2-lb     ansible_host=3.122.60.196
 
 [jnks-sql]
-aws-ec2-jk-sq     ansible_host=172.31.43.33
+aws-ec2-jk-sq     ansible_host=192.168.1.45
 
 [webapp]
 aws-ec2-wbapp  ansible_host=192.168.1.211
