--- a/ansible/roles/mysql/tasks/install-mysql.yaml
+++ b/ansible/roles/mysql/tasks/install-mysql.yaml
@@ -13,11 +13,23 @@
   mysql_user:
     name: root
     host: localhost
-    password: "123321"
+    password: "{{ mysql_root_password }}"
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
 
-- name: delete anonymous MySQL server user for localhost
-  action: mysql_user user="" state="absent"
+- name: Create database user 'php'
+  mysql_user:
+    name: php
+    host: "{{ hostvars[groups['webapp'][0]].ansible_host }}"
+    password: "{{ mysql_root_password }}"
+    priv: '*.*:ALL'
+    state: present
+    login_password: "{{ mysql_root_password }}"
 
-- name: remove the MySQL test database
-  action: mysql_db db=test state=absen
+- name: Comment bind
+  shell: sed -i 's/^bind-address/#bind-address/' /etc/mysql/mysql.conf.d/mysqld.cnf
 
+- name: Start mysql-server
+  service:
+    name: mysql
+    state:  restarted
