--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,17 +1,23 @@
 [all]
-#aws-ec2-lb
+aws-ec2-lb
 aws-ec2-jk-sq
 aws-ec2-wbapp
 
 [general]
 aws-ec2-jk-sq
-aws-ec2-wbapp
+aws-ec2-webapp1
+aws-ec2-webapp2
+
+[web-servers]
+aws-ec2-webapp1
+aws-ec2-webapp2
 
 [loadbalancer]
-#aws-ec2-lb     ansible_host=3.122.60.196
+aws-ec2-lb     ansible_host=3.120.26.194
 
 [jnks-sql]
-aws-ec2-jk-sq     ansible_host=192.168.1.45
+aws-ec2-jk-sq  ansible_host=3.120.26.194 ansible_port="{{ jenkins_sql_local_port }}"
 
 [webapp]
-aws-ec2-wbapp  ansible_host=192.168.1.211
+aws-ec2-webapp1  ansible_host=3.120.26.194 ansible_port="{{ web_server_1_local_port }}"
+aws-ec2-webapp2  ansible_host=3.120.26.194 ansible_port="{{ web_server_2_local_port }}"
