--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -1,2 +1,2 @@
-- include: install-nginx.yaml
-- include: apply-template.yaml
+- include_tasks: install-nginx.yaml
+- include_tasks: apply-template.yaml
