--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -8,16 +8,12 @@ aws-ec2-jk-sq
 aws-ec2-webapp1
 aws-ec2-webapp2
 
-[web-servers]
-aws-ec2-webapp1
-aws-ec2-webapp2
+[lb-jenkins]
+aws-ec2-lb     ansible_host="{{ lb_jenkins_ip }}"
 
-[loadbalancer]
-aws-ec2-lb     ansible_host=3.120.26.194
-
-[jnks-sql]
-aws-ec2-jk-sq  ansible_host=3.120.26.194 ansible_port="{{ jenkins_sql_local_port }}"
+[sql-server]
+aws-ec2-jk-sq  ansible_host="{{ lb_jenkins_ip }}" ansible_port="{{ jenkins_sql_local_port }}"
 
 [webapp]
-aws-ec2-webapp1  ansible_host=3.120.26.194 ansible_port="{{ web_server_1_local_port }}"
-aws-ec2-webapp2  ansible_host=3.120.26.194 ansible_port="{{ web_server_2_local_port }}"
+aws-ec2-webapp1  ansible_host="{{ lb_jenkins_ip }}" ansible_port="{{ web_server_1_local_port }}"
+aws-ec2-webapp2  ansible_host="{{ lb_jenkins_ip }}" ansible_port="{{ web_server_2_local_port }}"
