--- a/ansible/roles/jenkins/tasks/main.yml
+++ b/ansible/roles/jenkins/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: Run Jenkins Docker
-  shell: "sudo docker run -d --restart always -p 8080:8080 --name=jenkins jenkins/jenkins"
+  shell: "docker run -d -p 8080:8080 -p 50000:50000 --restart=on-failure -v /home/ubuntu:/var jenkins/jenkins:lts-jdk11"
 
 - name: Get AdminPass
-  shell: "sudo docker exec jenkins cat /var/jenkins_home/secrets/initialAdminPassword"
+  shell: "sudo cat /home/ubuntu/jenkins_home/secrets/initialAdminPassword"
   register: jenkins_password
   retries: 6
   delay: 5
@@ -14,6 +14,6 @@
 
 - name: Print output to file
   copy: 
-    content: {{"jenkins_password.stdout"}}
-    dest: ../file.txt
+    content: "{{jenkins_password.stdout}}"
+    dest: ../jenkins-adnminpass.txt
   delegate_to: localhost
