--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -12,7 +12,7 @@ aws-ec2-webapp2
 aws-ec2-lb     ansible_host="{{ lb_jenkins_ip }}"
 
 [sql-server]
-aws-ec2-jk-sq  ansible_host="{{ lb_jenkins_ip }}" ansible_port="{{ jenkins_sql_local_port }}"
+aws-ec2-jk-sq  ansible_host="{{ lb_jenkins_ip }}" ansible_port="{{ sql_local_port }}"
 
 [webapp]
 aws-ec2-webapp1  ansible_host="{{ lb_jenkins_ip }}" ansible_port="{{ web_server_1_local_port }}"
